--- a/app/globals.css
+++ b/app/globals.css
@@ -22,10 +22,15 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #010101;
+}
+
+.text-shadow {
+  color: black;
+  text-shadow:
+    -0.5px -0.5px 0 #FFFFFF,
+    0.5px -0.5px 0 #FFFFFF,
+    -0.5px 0.5px 0 #FFFFFF,
+    0.5px 0.5px 0 #FFFFFF;
+  ;
 }
