--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 .text-shadow {
-  color: black;
+  color: rgb(16, 16, 16);
   text-shadow:
     -0.5px -0.5px 0 #FFFFFF,
     0.5px -0.5px 0 #FFFFFF,
