--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,7 @@
 
 html {
   overflow-x: hidden !important;
+  background-color: #010101;
 }
 
 
@@ -31,7 +32,7 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: #010101;
+  background-color: #010101 !important; 
 }
 
 
