--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,15 @@ body {
     0.5px 0.5px 0 #FFFFFF;
   ;
 }
+
+.blog-container {
+  @apply container flex lg:grid lg:grid-cols-2 lg:gap-x-10 lg:gap-y-8 lg:grid-rows-3 flex-col gap-y-4 mt-10 mb-16;
+}
+
+.short-item {
+  @apply row-span-1	justify-center
+}
+
+.long-item {
+  @apply row-span-2	
+}
